# wolf-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README-vcpkg.md  README.md  ReadMe.md  folder_structure.txt  imgui.ini  vcpkg-configuration.json  vcpkg.json
Common/gameObject/Data/Shader/: DebugCube.fsh  DebugCube.vsh  default.vsh  directionalLight.fsh  grid.fsh  grid.vsh  pointLight.fsh
Common/gameObject/src/: README.md  aabb.cpp  aabb.h  camera.cpp  camera.h  debugCube.cpp  debugCube.h  directionalLight.h  light.h  lightManager.h  main.cpp  node.cpp  node.h  octTree.cpp  octTree.h  octTreeNode.cpp  octTreeNode.h  pointLight.h  scene.cpp  scene.h  volume.cpp  volume.h
Common/textBox/data/: sample.tsv
Common/textBox/data/FontData/: TNR100.fnt  script.fnt
Common/textBox/data/Shaders/: Quad.fsh  Quad.vsh  TextBoxBackround.fsh
Common/textBox/src/: Font.cpp  Font.h  ProcessFile.cpp  ProcessFile.h  Quad.cpp  Quad.h  TextBox.cpp  TextBox.h  TextTable.cpp  TextTable.h  driver.cpp
WolfEditor/: CMakeLists.txt
WolfEditor/editor/: Grid3D.cpp  Grid3D.h  Imgui.cpp  Imgui.h  ImguiWindow.h  editorCamera.cpp  editorCamera.h  editorScene.cpp  editorScene.h  editor_main.cpp
WolfEditor/editor/Windows/: ConsoleWindow.cpp  ConsoleWindow.h  GameViewWindow.cpp  GameViewWindow.h  HierarchyWindow.cpp  HierarchyWindow.h  InspectorWindow.cpp  InspectorWindow.h  SceneViewWindow.cpp  SceneViewWindow.h  StatsWindow.cpp  StatsWindow.h
data/: worldTransform.vsh
game/: CMakeLists.txt
game/data/: basic.fsh  basic.vsh  debugCube.fsh  debugCube.vsh
game/src/: GameLogic.h  Grid2D.h  MyGame.cpp  MyGame.h  OrbitCamera.cpp  OrbitCamera.h  Sphere.h  TestScene.h  debugCube.cpp  debugCube.h  sampleClipSpace.cpp  sampleClipSpace.h  sampleClipSpaceColors.cpp  sampleClipSpaceColors.h  sampleCube.cpp  sampleCube.h  sampleOrtho.cpp  sampleOrtho.h  samplePerspective.cpp  samplePerspective.h  sampleWorldTransform.cpp  sampleWorldTransform.h
samplefw/: examplemain.h  sampleClipSpace.cpp  sampleClipSpaceColors.cpp  sampleClipSpaceColors.h  sampleOrtho.cpp  sampleOrtho.h  sampleWorldTransform.h
src/: CMakeLists.txt  examplemain.cpp  main.cpp  sampleClipSpace.h  samplePerspective.cpp  samplePerspective.h  sampleWorldTransform.cpp
src/components/: MeshRender.cpp  PhysicsBodyComponent.cpp
src/core/: App.cpp  Common.cpp  Engine.cpp  GameObject.cpp  GameObjectManager.cpp  GameScene.cpp  InputManager.cpp  Scene.cpp  SceneView.cpp  Transform.cpp  camera.cpp
src/objects/: debugCube.cpp
src/physics/: PhysicsSystem.cpp  PhysicsSystemManager.cpp
src/render/: Buffer.cpp  BufferManager.cpp  IndexBuffer.cpp  Material.cpp  MaterialManager.cpp  Mesh.cpp  Model.cpp  Program.cpp  ProgramManager.cpp  RenderTarget.cpp  SkinnedModel.cpp  Texture.cpp  TextureManager.cpp  VertexBuffer.cpp  VertexDeclaration.cpp
wolf/: CMakeLists.txt  W_App.cpp  W_App.h  W_Texture.cpp  W_TextureManager.cpp  wolf.h
wolf/components/: MeshRenderer.h  PhysicsBodyComponent.h  TestComponent.h
wolf/core/: App.h  Common.h  Component.h  Engine.h  EngineStats.h  GameObject.h  GameObjectManager.h  GameScene.h  InputManager.h  Scene.h  SceneManager.h  SceneView.h  Transform.h  camera.h
wolf/data/: debugCube.vsh  uber.fsh  uber.vsh
wolf/objects/: debugCube.h
wolf/physics/: CollisionFilters.h  DebugCallbacks.h  Layers.h  Listeners.h  PhysicsSystem.h  PhysicsSystemManager.h
wolf/render/: BufferManager.h  IndexBuffer.h  Material.h  MaterialManager.h  Mesh.h  Model.h  Program.h  ProgramManager.h  RenderTarget.h  SkinnedModel.h  Texture.h  TextureManager.h  VertexBuffer.h  VertexDeclaration.h  render.h
wolf/scenes/: Squares.yaml  physics.yaml  scene.yaml
